<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:clickable="true"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="100dp">
    </ProgressBar>

    <TextView
        android:id="@+id/tv_book_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book"
        android:textSize="22sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintTop_toTopOf="parent"/>



    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_book_name"
        android:background="@android:color/holo_purple" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_book_last_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/last_price"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_book_high_price"
        app:layout_constraintTop_toBottomOf="@id/tv_book_high_price"
        app:layout_constraintBottom_toTopOf="@id/tv_book_low_price"/>

    <ImageView
        android:id="@+id/img_up"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/up_arrow"
        app:tint="@color/green"
        android:tintMode="multiply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_book_high_price"
        />
    <TextView
        android:id="@+id/tv_book_high_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_price"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingTop="8dp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/img_up"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/img_down"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/down_arrow"
        app:tint="@color/red"
        android:tintMode="multiply"
        android:layout_marginEnd="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_book_low_price"
        />

    <TextView
        android:id="@+id/tv_book_low_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_price"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/img_down"
        app:layout_constraintBottom_toTopOf="@id/ll_bids_asks"/>

    <LinearLayout
        android:id="@+id/ll_bids_asks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".75"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_bids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bids"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_book_last_price" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amount"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_order_bids"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_open_order" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asks"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_book_last_price" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amount"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_order_asks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_open_order" />

    </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>